--- a/resources/register.html
+++ b/resources/register.html
@@ -43,11 +43,11 @@
                </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a class="smoothScroll" href="/index.html">首页</a></li>
-                         <li><a class="smoothScroll" href="/picture.html">图片</a></li>
-                         <li><a class="smoothScroll" href="/video.html">视频</a></li>
-                         <li><a class="smoothScroll" href="/login.html">登录</a></li>
-                         <li><a class="smoothScroll" href="/register.html">注册</a></li>
+                         <li><a class="smoothScroll" href="./index.html">首页</a></li>
+                         <li><a class="smoothScroll" href="./picture.html">图片</a></li>
+                         <li><a class="smoothScroll" href="./video.html">视频</a></li>
+                         <li><a class="smoothScroll" href="./login.html">登录</a></li>
+                         <li><a class="smoothScroll" href="./register.html">注册</a></li>
                     </ul>
                </div>
 
